projects/bot_eval_run/batch_1770643297744/python-ai-stdlib-oracle_run_02/iterations/08/cmd_python_-m_unittest_discover_-v_-s_tests_-p_test_.py_.stderr.txt
test_oracle (unittest.loader._FailedTest.test_oracle) ... ERROR

======================================================================
ERROR: test_oracle (unittest.loader._FailedTest.test_oracle)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_oracle
Traceback (most recent call last):
  File "C:\Users\atrep\AppData\Local\Programs\Python\Python312\Lib\unittest\loader.py", line 396, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\atrep\AppData\Local\Programs\Python\Python312\Lib\unittest\loader.py", line 339, in _get_module_from_name
    __import__(name)
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\python-ai-stdlib-oracle_run_02\workspace\tests\test_oracle.py", line 8, in <module>
    from mini_ai.markov import MarkovChain
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\python-ai-stdlib-oracle_run_02\workspace\mini_ai\markov.py", line 1
    def generate(self, length: int, seed: str | None = None, random_seed: int | None = None) -> str:
IndentationError: unexpected indent


----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)
